WS_INTEGRATION/force-app/main/default/objects/Division__c/Division__c.object-meta.xml
<CustomObject>
    <description>Flat table that is manually maintained by the admin. This table handles the list of Campus, School, Unit, Department, and Cost Center</description>
    <label>Division</label>
    <nameField>
        <displayFormat>Div-{0}</displayFormat>
        <label>Division Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Divisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>