WS_INTEGRATION/force-app/main/default/objects/Division__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if the division is active or not. Does not define the relationship to the contact.</description>
    <inlineHelpText>Is the Division active?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>