WS_INTEGRATION/force-app/main/default/objects/Division__c/fields/Campus_WXID__c.field-meta.xml
<CustomField>
    <fullName>Campus_WXID__c</fullName>
    <description>Wellspring ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Wellspring ID</inlineHelpText>
    <label>Campus WXID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>