WS_INTEGRATION/force-app/main/default/objects/Division__c/fields/Cost_Center_WXID__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_WXID__c</fullName>
    <description>Wellspring ID</description>
    <externalId>true</externalId>
    <label>Cost Center WXID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>