WS_INTEGRATION/force-app/main/default/objects/Division__c/fields/Cost_Center_XID__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center_XID__c</fullName>
    <description>Peoplesoft ID</description>
    <externalId>true</externalId>
    <label>Cost Center XID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>