WS_INTEGRATION/force-app/main/default/objects/Division__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>School</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>