WS_INTEGRATION/force-app/main/default/objects/Division__c/fields/School_WXID__c.field-meta.xml
<CustomField>
    <fullName>School_WXID__c</fullName>
    <description>Wellspring ID</description>
    <externalId>true</externalId>
    <label>School WXID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>