WS_INTEGRATION/force-app/main/default/objects/Division__c/fields/School_XID__c.field-meta.xml
<CustomField>
    <fullName>School_XID__c</fullName>
    <description>Peoplesoft ID</description>
    <externalId>true</externalId>
    <label>School XID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>