WS_INTEGRATION/force-app/main/default/objects/Division__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Campus__c</columns>
    <columns>School__c</columns>
    <columns>Unit__c</columns>
    <columns>Department__c</columns>
    <columns>Cost_Center__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>